CKA simulator/multi-container-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-container-playground
  name: multi-container-playground
spec:
  containers:
    - image: nginx:1.17.6-alpine
      name: c1                                                                      # change
      resources: {}
      env:                                                                          # add
        - name: MY_NODE_NAME                                                          # add
          valueFrom:                                                                  # add
            fieldRef:                                                                 # add
              fieldPath: spec.nodeName                                                # add
      volumeMounts:                                                                 # add
        - name: vol                                                                   # add
          mountPath: /vol                                                             # add
    - image: busybox:1.31.1                                                         # add
      name: c2                                                                      # add
      command: ["sh", "-c", "while true; do date >> /vol/date.log; sleep 1; done"]  # add
      volumeMounts:                                                                 # add
        - name: vol                                                                   # add
          mountPath: /vol                                                             # add
    - image: busybox:1.31.1                                                         # add
      name: c3                                                                      # add
      command: ["sh", "-c", "tail -f /vol/date.log"]                                # add
      volumeMounts:                                                                 # add
        - name: vol                                                                   # add
          mountPath: /vol                                                             # add
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:                                                                        # add
    - name: vol                                                                   # add
      emptyDir: {}                                                                # add
status: {}
