CKA simulator/secrets-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secret-pod
  name: secret-pod
  namespace: secret       
spec:
  containers:
    - image: busybox:1.31.1
      name: secret-pod
      command: ["sh", "-c", "sleep 1d"]
      resources: {}
      volumeMounts:         
        - name: secret1       
          mountPath: /tmp/secret1
          readOnly: true      
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:                
    - name: secret1         
      secret:               
        secretName: secret1
